--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@vitejs/plugin-react": "^4.4.1",
         "axios": "^1.6.0",
         "body-parser": "^2.2.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "framer-motion": "^12.9.2",
