--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ DB_HOST=localhost
 EMAIL_USER=danya.chuyko2005@gmail.com
 EMAIL_PASS=qwertytrewq
 EMAIL_RECEIVER=danya.chuyko1701@gmail.com
+DATABASE_URL=postgres://postgres:Chuyko2005danya@host:5000/estore
